<resources>
    <string name="app_name">TaskManager</string>
    <string name="add_task">Add task</string>
    <string name="add_title">Add title</string>
    <string name="add_desc">Add description</string>
    <string name="save">Save</string>
    <string name="default_title">Default title</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
</resources>
