<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".NewTaskActivity">

    <EditText
        android:id="@+id/new_task_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_title"/>

    <EditText
        android:id="@+id/new_task_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_desc"/>

    <EditText
        android:id="@+id/new_start_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:hint="@string/start_date"/>

    <EditText
        android:id="@+id/new_end_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:hint="@string/end_date"/>

    <CheckBox
        android:id="@+id/new_task_isDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"/>

    <Button
        android:id="@+id/btn_save_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:text="@string/save"
        android:textSize="20sp"/>

</LinearLayout>